# OOP_lab5

./: CMakeLists.txt  README  main.cpp  tests.cpp
include/: allocator.h  array.h  complex_struct.h
